# bare-wasm-demo

./: Cargo.toml
src/: lib.rs
